--- a/_posts/thesis_chapters/2025-6-6-Gdps_v3.md
+++ b/_posts/thesis_chapters/2025-6-6-Gdps_v3.md
@@ -621,15 +621,23 @@ In the extract of Vignette 2, Tehillah (c) pursues a quirky design goal during h
 | Back Back Back<br>O O O.<br>Back O    | Tehillah laughs. <br>On screen Tehillah adds three coins to Level 3 by inserting o characters in the level design matrix |
 | Susanna: Goodness me what was the point of designing our car with fumes if we’re not going to use it?<br>Tehillah: I don’t know.  |  Susanna's tone of voice indicates frustration. After speaking Tehillah sighs deeply.    |
 
-Susanna(p)'s alarm at the child's deletion of all elements of hazard shows she has a sense of game balance to ensure a sense of challenge for the imagined player. "It's no fun having a game without any hazards to avoid." However, Tehillah (c) seems determined to remove all hazards. *"It is for me!"* she counters. My understanding is that she is may be aware of the implications for game balance but takes pleasure in this destruction of the key challenge of the game as an act of disruptive play. A later interaction with a peer shows that Tehillah (child) is indeed imagining the experience of the audience. *"I like making it frustrating. That other people find it frustrating!"* Tehillah (child) notes the persistence of a student helper who pushes past her frustration to complete the game. Her remark, *"If people tried hard they would get to my level,"* shows her awareness that not all players will persist in the same way to reach her final level, which has only rewards and no hazards. This being a *"secret, special"* experience, which plays against the norms of platform game design, is thus intended to provoke player surprise.
+Susanna(p)'s alarm at the child's deletion of all elements of hazard shows she has a sense of game balance to ensure a sense of challenge for the imagined player. "It's no fun having a game without any hazards to avoid." However, Tehillah (c) seems determined to remove all hazards. *"It is for me!"* she counters. She appears aware of the implications for game balance but to enjoy in the removal of all challenge within this game level as an act of disruptive play [^fl].
 
-Some other participants (Toby, Nasrin and R ) created extremely challenging or impossible game levels that frustrated other players. However not all participants were so aware of participants experience of game dynamic even with community guidance. Vignette 4 outlines several, sequential episodes of participant feedback on the level of the player challenge of Madiha's game. The discussion of game challenge, specifically comments about how 'hard' participant games were, was a particularly common interaction during playtesting. Vignette 4 (V4.a) outlines the community norming of Madiha(p)'s game to conform to expected standards of a platform game. The vignette shows varied attempts to influence Madiha to change the game variables to make controlling her player avatar less frustrating.  The indirect norming behaviours described in Vignette 4 mirror observations seen in the work of Rogoff and colleagues [@rogoff_cultural_2003] on learning in community settings. It appears that community norms of gameplay related to challenge began to develop, some of which were influenced by home experience of game playing.  
+<!--
+MOVE TO THE VIGNETTE?
+
+Her previous levels are difficult due to a lack of player control. A later interaction with a student helper shows that Tehillah is taking account of the experience of the audience. "Tehillah: I like making it frustrating, that other people find it frustrating!"* Tehillah notes the persistence of a student helper who pushes past her frustration to complete the game. Her remark, "Tehillah: If people tried hard they would get to my level," shows her growing awareness that not all players will persist in the same way to reach her final level with no hazards .   -->
+
+Some other participants (Toby, Nasrin and R ) created extremely challenging or impossible game levels that frustrated other players. However not all participants were so aware of participants experience of game dynamic even with community guidance. Vignette 4 outlines several, sequential episodes of participant feedback on the level of the player challenge of Madiha's game. The discussion of game challenge, specifically comments about how 'hard' participant games were, was a particularly common interaction during playtesting. Vignette 4 (V4.a) outlines the community norming of Madiha(p)'s game to conform to expected standards of a platform game. The vignette shows varied attempts to influence Madiha to change the game variables to make controlling her player avatar less frustrating.  
+
 
 
 **Commentary**
 
+The indirect norming behaviours described in Vignette 4 mirror observations seen in the work of Rogoff and colleagues [@rogoff_cultural_2003] on learning in community settings. It appears that community norms of gameplay related to challenge began to develop, some of which were influenced by home experience of game playing.  
 
-These examples serve to highlight two dimensions of the use of GDP concepts to facilitate the process of designing for others. The first is the influence of making in a cultural setting where regular playtesting by peers occurs on the making process. The second is through either direct advice by pair partners and peers in playtesting to imagining others' user experience, or indirectly by gameplay feedback or suggesting alterations to GDP implementations. This research is in line with the interpretation within computer supported collaborative learning of the value of the  of tangible, public digital products as both a motivating and focusing factor in computer-supported collaborative learning (CSCL) [@xambo_experience_2017; @fields_programmers_2015]. The results here are valuable as a contribution help address a deficit of results in the use of CSCL to support computer programming [@silva_computer-supported_2020].
+
+These examples also serve to highlight two dimensions of the use of GDP concepts to facilitate the process of designing for others. The first is the influence of making in a cultural setting where regular playtesting by peers occurs on the making process. The second is through either direct advice by pair partners and peers in playtesting to imagining others' user experience, or indirectly by gameplay feedback or suggesting alterations to GDP implementations. This research is in line with the interpretation within computer supported collaborative learning of the value of the  of tangible, public digital products as both a motivating and focusing factor in computer-supported collaborative learning (CSCL) [@xambo_experience_2017; @fields_programmers_2015]. The results here are valuable as a contribution help address a deficit of results in the use of CSCL to support computer programming [@silva_computer-supported_2020].
 
 MOVED HERE INTEGREATE UP
 Chapter 2 explored the proposition from professional and participatory design processes that design should be informed by end-user experience [@redstrom_towards_2006], as well as the challenges involved in undertaking such an *"operationalization of empathy"* [@surma-aho_conceptualization_2022, p.1]. From a CHAT interpretation, this process involves shifts in perspective by participants as they engage with objectives across different scopes of activity.
@@ -693,7 +701,7 @@ While existing work on computational design patterns by Repenning et al. [-@repe
 In contrast, the different types of GDPs available to participants to choose from in the menu of GDP documentation and code snippets allowed for a choice in participant making paths, enabling alignment with home interests.
 
 As a contribution this area of research,  I propose that the diversity and subdivision of a menu of GDPs aligned with the MDA framework can help participants to elect to follow varied learning pathways based on their home interests in a way which aligns with characteristics of the inclusive pedagogy [@sanger_inclusive_2020].
-THIS FEELS LIKE DUPLICATION WITH THE ABOVE NOW. 
+THIS FEELS LIKE DUPLICATION WITH THE ABOVE NOW.
 
 Specifically, this is achieved by providing scaffolding and resources which allow exploration of concepts which providing multiple means of engagement with the learning process [@capp_effectiveness_2017].
 
@@ -1390,6 +1398,8 @@ Returning to Kynigos's interpretation of the half-baked game as a boundary objec
 [^fk]: see Vignette 6 and the later section of this chapter on repertoire use.
 
 [^rpp]: The concept of repertoires of practice and how they move and transform as learners enter different spaces is outlined in Chapter 3 [@gutierrez_cultural_2003].
+
+[^fl]: Tehillah describes her final level which has only rewards and no hazards as a *"secret, special"* experience. Indicating that she is playing against the norms of platform game design in a way designed to provoke player surprise.
 
 <!-- STRUCTURE VIA THIS MINI TEMPLATE
 
